# irregular

./: .gitignore  README.md  email.txt  failing_cases.txt  irregular.cabal  phone-number.txt  phonenumber.txt  test.txt
irregular-ui/: package.json
irregular-ui/src/: App.css  App.tsx  ProgramEditor.css  ProgramEditor.tsx  Text.tsx
src/: Compiler.hs  Main.hs  ParseUtils.hs  Parser.hs  Server.hs  Types.hs  Util.hs
